--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -352,6 +352,46 @@
                         android:textSize="18sp" />
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/reportBug"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/rubikmedium"
+                    android:text="Report a Bug"
+                    android:textColor="@color/calNourishText"
+                    android:textSize="24sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/calnourishEmail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/rubikregular"
+                        android:text="CalNourish Email"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/calNourishText"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/locationText2"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/rubikregular"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/calNourishText"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
                 <Button
                     android:id="@+id/updateButton"
                     android:layout_width="wrap_content"
