--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
 <!-- Cal Nourish Colors-->
     <color name="calNourishAccent">#febd40</color>
     <color name="calNourishRed">#DB2B39</color>
-    <color name="calNourishText">#5e5e5e</color>
+    <color name="calNourishText">#5E5E5E</color>
     <color name="calNourishGray">#b4b4b4</color>
     <color name="calNourishLightGray">#e0e0e0</color>
     <color name="calNourishGreen">#6eb257</color>
