--- a/app/src/main/res/layout/activity_individual_item.xml
+++ b/app/src/main/res/layout/activity_individual_item.xml
@@ -6,30 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".IndividualItemActivity">
 
+    <Button
+        android:id="@+id/search_bar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/calNourishLightGray"
+        android:clickable="true"
+        android:drawableLeft="@drawable/ic_baseline_search_24px"
+        android:drawableTint="@color/calNourishText"
+        android:paddingLeft="16dp" />
+
+    <RelativeLayout
+        android:id="@+id/bottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true">
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottomNavView_Bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/white_grey_border_top"
+            app:menu="@menu/bottom_navigation_menu">
+
+
+        </android.support.design.widget.BottomNavigationView>
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/individualItemCount"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/individualItemName"
-        android:layout_marginTop="35dp"
+        android:layout_below="@+id/individualItemImage"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/rubikmedium"
         android:text="TextView"
+        android:textAlignment="center"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/individualItemName"
-        android:layout_width="166dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="28dp"
+        android:layout_below="@+id/search_bar2"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/rubikmedium"
         android:text="ItemName"
+        android:textAlignment="center"
         android:textSize="30sp" />
 
     <ImageView
         android:id="@+id/individualItemImage"
-        android:layout_width="213dp"
-        android:layout_height="244dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="141dp"
-        android:layout_marginBottom="346dp" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/individualItemName"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp" />
 </RelativeLayout>
