--- a/app/src/main/res/layout/activity_individual_item.xml
+++ b/app/src/main/res/layout/activity_individual_item.xml
@@ -20,6 +20,51 @@
         android:drawableTint="@color/calNourishText"
         android:paddingLeft="16dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomBar"
+        android:layout_below="@+id/search_bar2"
+        android:layout_margin="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_white_background"
+        android:elevation="2dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/individualItemName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/rubikmedium"
+            android:text="ItemName"
+            android:textAlignment="center"
+            android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/individualItemImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="48dp" />
+
+        <TextView
+            android:id="@+id/individualItemCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/rubikmedium"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
@@ -37,34 +82,4 @@
         </android.support.design.widget.BottomNavigationView>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/individualItemCount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/individualItemImage"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/rubikmedium"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/individualItemName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/search_bar2"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/rubikmedium"
-        android:text="ItemName"
-        android:textAlignment="center"
-        android:textSize="30sp" />
-
-    <ImageView
-        android:id="@+id/individualItemImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/individualItemName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp" />
 </RelativeLayout>
