--- a/app/src/main/res/layout/item_card_activity.xml
+++ b/app/src/main/res/layout/item_card_activity.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="2dp"
     android:layout_marginBottom="2dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -84,5 +84,5 @@
             </LinearLayout>
 
         </FrameLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
