--- a/app/src/main/res/layout/activity_community_agreement.xml
+++ b/app/src/main/res/layout/activity_community_agreement.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/CommunityTitle"
