--- a/app/src/main/res/layout/notification_card_activity.xml
+++ b/app/src/main/res/layout/notification_card_activity.xml
@@ -1,15 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/completeCard"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
@@ -26,15 +24,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemImage"
-                    android:layout_width="80dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="8dp"
-                    app:srcCompat="@color/calNourishAccent" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -67,22 +58,10 @@
                         android:textColor="@color/calNourishGray"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/itemCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:fontFamily="@font/rubikmedium"
-                        android:text="cardText1"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishText"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
                 </LinearLayout>
 
             </LinearLayout>
 
         </FrameLayout>
     </androidx.cardview.widget.CardView>
-</FrameLayout>
+</LinearLayout>
