--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -20,7 +20,7 @@
     <item
         android:id="@+id/foodrecovery"
         android:icon="@drawable/ic_group"
-        android:title="Food Recovery"
+        android:title="Notifications"
         />
     <item
         android:id="@+id/menu"
