--- a/app/src/main/res/layout/notification_card_activity.xml
+++ b/app/src/main/res/layout/notification_card_activity.xml
@@ -61,6 +61,14 @@
 
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="3 days ago"
+                    android:textAlignment="viewEnd" />
+
             </LinearLayout>
 
         </FrameLayout>
