--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -273,6 +273,57 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/location"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/rubikregular"
+                        android:text="Location"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/calNourishText"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/locationText"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/rubikregular"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/calNourishText"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/phone"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Phone" />
+
+                    <TextView
+                        android:id="@+id/phoneText"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:autoLink="phone" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:id="@+id/email"
                         android:layout_width="40dp"
                         android:layout_height="wrap_content"
@@ -314,35 +365,6 @@
 
                     <TextView
                         android:id="@+id/urlText"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/rubikregular"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishText"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/location"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/rubikregular"
-                        android:text="Location"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishText"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/locationText"
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
