--- a/app/src/main/res/layout/item_card_activity.xml
+++ b/app/src/main/res/layout/item_card_activity.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/completeCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -65,7 +66,9 @@
                         android:text="cardText1"
                         android:textAlignment="viewStart"
                         android:textColor="@color/calNourishGray"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="invisible"
+                        tools:visibility="invisible" />
 
                     <TextView
                         android:id="@+id/itemCount"
